fix facets alignment again

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -554,7 +554,7 @@ div.gn, div.g, * {
       }
     }
     .sxt-categorytree-leaf {
-      margin-left: 1.35em;
+      margin-left: 16px;
     }
   }
 
@@ -1429,7 +1429,7 @@ ul.invalid {
 .gn-facet {
   font-size: @sxt-fontsize;
   .fa {
-    margin-right: .3em;
+    margin-right: 4px;
   }
 
   h5 .fa {
